--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 	<div id="sidebarContainer"><!-- Start Sidebar wrapper -->
 		<div id="navcontainer"><!-- Start Navigation -->
-			<ul><li><a href="index.html" rel="self" id="current">Home</a></li><li><a href="contact/index.php" rel="self">Contact</a></li><li><a href="changes/index.html" rel="self">Change Log</a></li><li><a href="examples/index.html" rel="self">Examples</a></li><li><a href="page2/page2.html" rel="self">Team</a></li></ul>
+			<ul><li><a href="index.html" rel="self" id="current">Home</a></li><li><a href="styled/index.html" rel="self">Contact</a></li><li><a href="changes/index.html" rel="self">Change Log</a></li><li><a href="examples/index.html" rel="self">Examples</a></li><li><a href="page2/page2.html" rel="self">Team</a></li></ul>
 		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader">Links</h1><!-- Sidebar header -->
@@ -75,7 +75,7 @@
 		<div id="breadcrumbcontainer"><!-- Start the breadcrumb wrapper -->
 			<ul><li><a href="index.html">Home</a>&nbsp;>&nbsp;</li></ul>
 		</div><!-- End breadcrumb -->
-		<p>Copyright &copy; 2008-2010 by Tom Gordon</p>
+		<p>Copyright &copy; 2008-2011 by Tom Gordon</p>
 	</div><!-- End Footer -->
 
 </div><!-- End container -->
