- changed the name of the contact folder

--- a/examples/index.html
+++ b/examples/index.html
@@ -31,7 +31,7 @@
 	
 	<div id="sidebarContainer"><!-- Start Sidebar wrapper -->
 		<div id="navcontainer"><!-- Start Navigation -->
-			<ul><li><a href="../index.html" rel="self">Home</a></li><li><a href="../styled/index.html" rel="self">Contact</a></li><li><a href="../changes/index.html" rel="self">Change Log</a></li><li><a href="index.html" rel="self" id="current">Examples</a></li><li><a href="../page2/page2.html" rel="self">Team</a></li></ul>
+			<ul><li><a href="../index.html" rel="self">Home</a></li><li><a href="../contact/index.html" rel="self">Contact</a></li><li><a href="../changes/index.html" rel="self">Change Log</a></li><li><a href="index.html" rel="self" id="current">Examples</a></li><li><a href="../page2/page2.html" rel="self">Team</a></li></ul>
 		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader"></h1><!-- Sidebar header -->
