- Added a local copy of the LKIF specification.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <li>argument mapping and visualization</li>
 <li>argument evaluation, applying proof standards and respecting the distribution of the burden of proof</li>
 <li>argument construction from OWL ontologies and defeasible rules</li>
-<li>argument interchange in XML, using the <a href="http://carneades.berlios.de/files/LKIF-Specification.pdf">Legal Knowledge Interchange Format</a> (LKIF)</li>
+<li>argument interchange in XML, using the <a href="resources/Home/LKIF-Specification.pdf">Legal Knowledge Interchange Format</a> (LKIF)</li>
 </ol>
 
 <p>The argument construction module uses resource-bounded heuristic strategies to search the space of arguments induced by a set of computational models of various argumentation schemes. &nbsp;Several heuristic search strategies are available, "out of the box".  The system includes a simple API for extending the system with computational models of other argumentation schemes. &nbsp;Any number of argumentation schemes may be used together, making Carneades an open architecture for hybrid reasoning.</p>
