- Added a "downloads" links to the sidebar.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader">Links</h1><!-- Sidebar header -->
-			<a href="https://github.com/carneades/carneades">GIT Repository</a><br/>
+			<a href="https://github.com/carneades/carneades/downloads">Downloads</a><br/>
+
+<a href="https://github.com/carneades/carneades">GIT Repository</a><br/>
 
 <a href="http://www.tfgordon.de/publications">Publications</a><!-- sidebar content you enter in the page inspector -->
 			 <!-- sidebar content such as the blog archive links -->
