- Updated the list of tasks supported by Carneades to include abduction

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 <p>Carneades provides tools supporting a variety of argumentation tasks, including:</p>
 
 <ol>
+<li>argument construction from conceptual models (ontologies), defeasible rules and argumentation schemes</li>
+<li>argument evaluation, using proof burdens and standards and a model of the audience</li>
+<li>finding positions to support claims, using abduction</li>
 <li>argument mapping and visualization</li>
-<li>argument evaluation, applying proof standards and respecting the distribution of the burden of proof</li>
-<li>argument construction from OWL ontologies and defeasible rules</li>
 <li>argument interchange in XML, using the <a href="resources/Home/LKIF-Specification.pdf">Legal Knowledge Interchange Format</a> (LKIF)</li>
 </ol>
 
