Updated the web site to cover Carneades 2.0

--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
 	
 	<div id="sidebarContainer"><!-- Start Sidebar wrapper -->
 		<div id="navcontainer"><!-- Start Navigation -->
-			<ul><li><a href="../index.html" rel="self">Home</a></li><li><a href="index.html" rel="self" id="current">Contact</a></li><li><a href="../changes/index.html" rel="self">Change Log</a></li><li><a href="../examples/index.html" rel="self">Examples</a></li><li><a href="../page2/page2.html" rel="self">Team</a></li></ul>
+			<ul><li><a href="../index.html" rel="self">Home</a></li><li><a href="index.html" rel="self" id="current">Contact</a></li><li><a href="../changes/index.html" rel="self">Change Log</a></li><li><a href="../page2/page2.html" rel="self">Team</a></li></ul>
 		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader"></h1><!-- Sidebar header -->
@@ -42,7 +42,7 @@
 	
 	<div id="contentContainer"><!-- Start main content wrapper -->
 		<div id="content"><!-- Start content -->
-			<span style="font:13px Arial, Verdana, Helvetica, sans-serif; color:#3F3732;">Prof. Dr. Thomas F. Gordon<br /></span><span style="font:13px Arial, Verdana, Helvetica, sans-serif; color:#801616;"><u><a href="http://www.google.com/url?q=http%3A%2F%2Fwww.fokus.fraunhofer.de&sa=D&sntz=1&usg=AFrqEze9KI9Rk0srGKjT3Ee7pYYpRj83vQ">Fraunhofer FOKUS</a></u></span><span style="font:13px Arial, Verdana, Helvetica, sans-serif; color:#3F3732;"> <br />Kaiserin-Augusta-Allee 31 <br />10589 Berlin, Germany <br />+49 (0)30 3463 7219 <br />thomas.gordon(at)fokus.fraunhofer.de</span>
+			<span style="font:13px Arial, Verdana, Helvetica, sans-serif; color:#413631;">Prof. Dr. Thomas F. Gordon<br /></span><span style="font:13px Arial, Verdana, Helvetica, sans-serif; color:#8F0004;"><u><a href="http://www.google.com/url?q=http%3A%2F%2Fwww.fokus.fraunhofer.de&sa=D&sntz=1&usg=AFrqEze9KI9Rk0srGKjT3Ee7pYYpRj83vQ">Fraunhofer FOKUS</a></u></span><span style="font:13px Arial, Verdana, Helvetica, sans-serif; color:#413631;"> <br />Kaiserin-Augusta-Allee 31 <br />10589 Berlin, Germany <br />+49 (0)30 3463 7219 <br />thomas.gordon(at)fokus.fraunhofer.de</span>
 		</div><!-- End content -->
 	</div><!-- End main content wrapper -->
 	
@@ -52,7 +52,7 @@
 		<div id="breadcrumbcontainer"><!-- Start the breadcrumb wrapper -->
 			<ul><li><a href="../index.html">Home</a>&nbsp;>&nbsp;</li><li><a href="index.html">Contact</a>&nbsp;>&nbsp;</li></ul>
 		</div><!-- End breadcrumb -->
-		<p>Copyright &copy; 2008-2011 by Tom Gordon</p>
+		<p>Copyright &copy; 2008-2012 by Tom Gordon</p>
 	</div><!-- End Footer -->
 
 </div><!-- End container -->
