--- a/page2/page2.html
+++ b/page2/page2.html
@@ -31,7 +31,7 @@
 	
 	<div id="sidebarContainer"><!-- Start Sidebar wrapper -->
 		<div id="navcontainer"><!-- Start Navigation -->
-			<ul><li><a href="../index.html" rel="self">Home</a></li><li><a href="../contact/index.html" rel="self">Contact</a></li><li><a href="../changes/index.html" rel="self">Change Log</a></li><li><a href="../examples/index.html" rel="self">Examples</a></li><li><a href="page2.html" rel="self" id="current">Team</a></li></ul>
+			<ul><li><a href="../index.html" rel="self">Home</a></li><li><a href="../contact/index.html" rel="self">Contact</a></li><li><a href="../changes/index.html" rel="self">Change Log</a></li><li><a href="page2.html" rel="self" id="current">Team</a></li></ul>
 		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader"></h1><!-- Sidebar header -->
@@ -48,7 +48,6 @@
 
 <ul>
 <li>Pierre Allix</li>
-<li>Stefan Ballnat</li>
 <li><a href="http://www.tfgordon.de">Tom Gordon</a> (Project Leader)</li>
 <li>Martin L&ouml;he</li>
 </ul>
@@ -56,8 +55,10 @@
 <h2>Contributors</h2>
 
 <ul>
+<li><li>Stefan Ballnat</li>
 <li><a href="http://www.csc.liv.ac.uk/~tbc/">Trevor Bench-Capon</a>, Department of Computer Science, University of Liverpool</li>
 </li>
+<li>Marcello Ceci, University of Bologna</li>
 <li><a href="http://www.plainreasoning.com/">Matthias Grabmair<a>, Intelligent Systems Program, University of Pittsburg</li>
 <li><a href="http://people.cs.uu.nl/henry/">Henry Prakken</a>, Intelligent Systems Group, Utrecht University</li>
 <li><a href="http://www.dougwalton.ca/">Doug Walton</a>, University of Windsor, Canada</li>
@@ -72,7 +73,7 @@
 		<div id="breadcrumbcontainer"><!-- Start the breadcrumb wrapper -->
 			<ul><li><a href="../index.html">Home</a>&nbsp;>&nbsp;</li><li><a href="page2.html">Team</a>&nbsp;>&nbsp;</li></ul>
 		</div><!-- End breadcrumb -->
-		<p>Copyright &copy; 2008-2011 by Tom Gordon</p>
+		<p>Copyright &copy; 2008-2012 by Tom Gordon</p>
 	</div><!-- End Footer -->
 
 </div><!-- End container -->
