--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <p>To download, install and run the Carneades Web Application<p>
 
 <ol>
-<li>Download the <code>carneades-webapp.zip</code> file from the <a href="https://github.com/carneades/carneades/downloads">downloads</a> section.</li>
+<li>Download the <a href="https://dl.dropbox.com/s/ay94roj8q5mwev9/carneades-webapp.zip?dl=1"><code>carneades-webapp.zip</code></a>.</li>
 <li>Unzip the carneades-webapp.zip file.</li>
 <li>Change to the carneades-webapp directory.</li>
 <li>Double click on the carneades-webapp.jar file.</li>
