Refinements to the web site

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader">Links</h1><!-- Sidebar header -->
-			<a href="https://github.com/carneades/carneades/downloads">Downloads</a><br/>
+			<a href="https://www.wuala.com/Carneades/Releases/?key=jouEYt9R1IEl">Releases</a><br/>
 
 <a href="https://github.com/carneades/carneades">GIT Repository</a><br/>
 
@@ -48,7 +48,7 @@
 	
 	<div id="contentContainer"><!-- Start main content wrapper -->
 		<div id="content"><!-- Start content -->
-			<p>Version 2.x of the Carneades argumentation system provides web-based, collaborative software tools for:</p>
+			<p>The Carneades argumentation system provides web-based, collaborative software tools for:</p>
 
 <ul>
 <li>summarizing the arguments of a debate in an <b>argument graph</b></li>
@@ -58,11 +58,11 @@
 <li>obtaining clear explanations, using argument graphs, of the different effects of alternative policies in particular cases</li>
 </ul>
   
-<center><img src="resources/Home/map1.png" alt="Carneades Editor Screen Shot" width="450"/></center>
+<center><img src="resources/Home/argument2.png" alt="Carneades Web App" width="450"/></center>
 
-<h2>New Features of Version 2.0</h2>
+<h2>Introducing the Carneades Web App</h2>
 
-<p>Carneades 2.x is a Web application with a three-tiered architecture consisting of a relational database backend layer, an application logic layer and a graphical user interface layer. (The previous version of Carneades, a desktop application called the Carneades Editor, is still available in the <a href="https://github.com/carneades/carneades/downloads">downloads</a> section.)</p>
+<p>The latest version of Carneades is a Web application with a three-tiered architecture consisting of a relational database backend layer, an application logic layer and a graphical user interface layer. (The previous version of Carneades, a desktop application called the <a href="https://www.wuala.com/Carneades/Releases/carneades-editor-1.0.2.jar/?key=jouEYt9R1IEl">Carneades Editor</a>, is still available.</p>
 
 <ul>
 <li>Now a multiuser Web application, with a three-tier architecture, including a relational database backend.</li>
@@ -94,7 +94,7 @@
 <p>To download, install and run the Carneades Web Application<p>
 
 <ol>
-<li>Download the <a href="https://dl.dropbox.com/s/ay94roj8q5mwev9/carneades-webapp.zip?dl=1"><code>carneades-webapp.zip</code></a>.</li>
+<li>Download the <a href="https://www.wuala.com/Carneades/Releases/carneades-webapp-0.7.zip/?key=jouEYt9R1IEl"><code>carneades-webapp.zip</code></a>.</li>
 <li>Unzip the carneades-webapp.zip file.</li>
 <li>Change to the carneades-webapp directory.</li>
 <li>Double click on the carneades-webapp.jar file.</li>
@@ -112,9 +112,6 @@
    started the server on a Mac by double clicking on the jar file, you can shutdown the 
    server by quitting the "routes_selfexe" application in the usual way, with Command-Q.</li>
 </ol>
-
-
-
 
 <h2>Acknowledgements</h2>
 
