added a caption to the figure

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <li>obtaining clear explanations, using argument graphs, of the different effects of alternative policies in particular cases</li>
 </ul>
   
-<center><img src="resources/Home/argument2.png" alt="Carneades Web App" width="450"/></center>
+<center><img src="resources/Home/argument2.png" alt="Carneades Web App" width="450"/><br/>
+Figure. Screen Shot of the Carneades Web App</center>
 
 <h2>Introducing the Carneades Web App</h2>
 
