--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@ Figure. Screen Shot of the Carneades Web App</center>
 
 <p>The latest version of Carneades is a Web application with a three-tiered architecture consisting of a relational database backend layer, an application logic layer and a graphical user interface layer. (The previous version of Carneades, a desktop application called the <a href="https://www.wuala.com/Carneades/Releases/carneades-editor-1.0.2.jar/?key=jouEYt9R1IEl">Carneades Editor</a>, is still available.</p>
 
+<p>New Features:</p>
+
 <ul>
 <li>Now a multiuser Web application, with a three-tier architecture, including a relational database backend.</li>
+<li>Zero configuration and zero administration, with a built-in database engine and web server.</li>
+<li>Can be used locally by a single user, without an Internet connection.</li>
 <li>New argument evaluator, based on ASPIC+ and Dung abstract argumentation frameworks.  Cyclic argument graphs are now handled.</li>
 <li>Argument maps are now represented for the Web using Structured Vector Graphics (SVG)</li>
 <li>New XML format for exporting and interchanging argument graphs, called the Carneades Argument Format (CAF). </li>
@@ -95,7 +99,7 @@ Figure. Screen Shot of the Carneades Web App</center>
 <p>To download, install and run the Carneades Web Application<p>
 
 <ol>
-<li>Download the <a href="https://www.wuala.com/Carneades/Releases/carneades-webapp-0.7.zip/?key=jouEYt9R1IEl"><code>carneades-webapp.zip</code></a>.</li>
+<li>Download the <a href="https://www.wuala.com/Carneades/Releases/carneades-webapp-0.7.zip/?key=jouEYt9R1IEl"><code>carneades-webapp.zip</code></a> file.</li>
 <li>Unzip the carneades-webapp.zip file.</li>
 <li>Change to the carneades-webapp directory.</li>
 <li>Double click on the carneades-webapp.jar file.</li>
