Corrected a typo and revised the downloading instructions
The instructions are now independent of the latest version number.

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@ Figure. Screen Shot of the Carneades Web App</center>
 <p>To download, install and run the Carneades Web Application<p>
 
 <ol>
-<li>Download the <a href="https://www.wuala.com/Carneades/Releases/carneades-webapp-0.7.zip/?key=jouEYt9R1IEl"><code>carneades-webapp.zip</code></a> file.</li>
-<li>Unzip the carneades-webapp.zip file.</li>
-<li>Change to the carneades-webapp directory.</li>
-<li>Double click on the carneades-webapp.jar file.</li>
-<li>Alteratively, execute the following command line:<br/>
+<li>Download the latest version of the <code>carneades-webapp.x.x.zip</code> file from the <a href="https://www.wuala.com/Carneades/Releases/?key=jouEYt9R1IEl">releases</a> folder.</li>
+<li>Unzip the <code>carneades-webapp.x.x.zip</code> file.</li>
+<li>Change to the <code>carneades-webapp</code> directory.</li>
+<li>Double click on the <code>carneades-webapp.jar</code> file.</li>
+<li>Alternatively, execute the following command line:<br/>
 
    <code>$ java -jar carneades-webapp.jar</code>
 </li>
