The home page now offers the manual in several formats.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Figure. Screen Shot of the Carneades Web App</center>
 
 <h2>Documentation</h2>
 
-<p>A <a href="https://github.com/carneades/carneades/blob/master/doc/manual/out/manual.pdf?raw=truet">draft user manual</a> is available (PDF).</a>
+<p>A <a href="https://github.com/carneades/carneades/blob/master/doc/manual/out/">draft user manual</a> is available in various formats (PDF, HTML, ePub).</a>
 
 <p>For programmers, online documentation of the <a href="http://carneades.github.com/doc/api">Carneades APIs</a> is also available.</p>
 
