--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Figure. Screen Shot of the Carneades Web App</center>
 <p>To download, install and run the Carneades Web Application<p>
 
 <ol>
-<li>Download the latest version of the <code>carneades-webapp.x.x.zip</code> file from the <a href="https://www.wuala.com/Carneades/Releases/?key=jouEYt9R1IEl">releases</a> folder.</li>
+<li>Download the latest version of the <code>carneades-webapp.x.x.zip</code> file from the <a href="https://www.dropbox.com/sh/dratrir8zh72ako/zSlrAC2K1D">releases</a> folder.</li>
 <li>Unzip the <code>carneades-webapp.x.x.zip</code> file.</li>
 <li>Change to the <code>carneades-webapp</code> directory.</li>
 <li>Double click on the <code>carneades-webapp.jar</code> file.</li>
